_archive/content-services/3.4/concepts/dev-Share-intro.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: Share
keyword: integration
---

# Customizing and extending Alfresco Share

Alfresco Share provides a rich web-based collaboration environment for managing documents, wiki content, blogs and more. Share leverages the Alfresco repository to provide content services and uses the Alfresco Surf platform to provide the underlying presentation framework.

A number of options are available to developers and administrators for customizing Alfresco Share to better fit into their environment. Many of these mechanisms are provided by the underlying Surf framework, therefore a knowledge of Surf is considered useful for anyone wishing to implement substantial customizations.

-   **[Customizing Alfresco Share configuration items](../tasks/share-customize.md)**  
This section describes how to customize Alfresco Share configuration items.
-   **[Building a custom Knowledge Base application](../concepts/kb-getting-started-overview.md)**  
This section provides an example of how to build a custom Knowledge Base application in Alfresco.

**Parent topic:**[Customizing and extending](../concepts/ch-customize.md)

