_archive/content-services/4.0/concepts/dev-Share-intro.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: Share
keyword: integration
---

# Customizing and extending Alfresco Share

Alfresco Share provides a rich web-based collaboration environment for managing documents, wiki content, blogs and more. Share leverages the Alfresco repository to provide content services and uses the Alfresco Surf platform to provide the underlying presentation framework.

A number of options are available to developers and administrators for customizing Alfresco Share to better fit into their environment. Many of these mechanisms are provided by the underlying Surf framework, therefore a knowledge of Surf is considered useful for anyone wishing to implement substantial customizations.

-   **[Customizing Alfresco Share configuration items](../tasks/share-customize.md)**  
This section describes how to customize Alfresco Share configuration items.
-   **[NodeLocator service](../concepts/node-locator-intro.md)**  
The section describes the `NodeLocatorService`. The service provides a way to lookup one node from another.
-   **[Share Extensibility](../concepts/Share-Extensibility-Intro.md)**  
 With Alfresco, Version 4.0, there are new extensibility features that provide a number of different ways to make configuration and customization easier.   
-   **[Extending the Alfresco Share Document Library](../concepts/Share-Doclib-Extend-Intro.md)**  
With Alfresco, Version 4.0, there are new extension points for the document library. 

**Parent topic:**[Customizing](../concepts/ch-customize.md)

